--- a/views/add_equipment.html
+++ b/views/add_equipment.html
@@ -91,7 +91,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationOR">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionOR">Daily Inspection Reports</a></li>
-                                    <li><a href="/showPreventiveMaintainanceOR">Preventive Maintainance Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceOR">Preventive Maintainance</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
@@ -101,7 +101,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationCCU">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionCCU">Daily Inspection Reports</a></li>
-                                    <li><a href="/showPreventiveMaintainanceCCU">Preventive Maintainance Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceCCU">Preventive Maintainance</a></li>
 
                                 </ul>
                             </li>
@@ -112,7 +112,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationOutPatient">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionOutPatient">Daily Inspection Reports</a></li>
-                                    <li><a href="/showPreventiveMaintainanceOutPatient">Preventive Maintainance Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceOutPatient">Preventive Maintainance</a></li>
 
                                 </ul>
                             </li>
@@ -126,7 +126,7 @@
                         <ul class="sub">
                             <li><a href="/pre-installationform">Add Pre-installation Report</a></li>
                             <li><a href="/showDailyInspectionForm">Add Daily Inspection Report</a></li>
-                            <li><a href="/showPreventiveMaintainanceForm">Add Preventive Maintainance Report</a></li>
+                            <li><a href="/showPreventiveMaintainanceForm">Add Preventive Maintainance</a></li>
 
                         </ul>
                     </li>
