--- a/views/home/CCUPreinstallReport.handlebars
+++ b/views/home/CCUPreinstallReport.handlebars
@@ -79,29 +79,29 @@
                 </li>
 
                 <li class="sub-menu">
-                    <a href="javascript:;">
+                    <a class="active"href="javascript:;">
                         <i class="fa  fa-hospital-o"></i>
                         <span>Departments</span>
                     </a>
                     <ul style="padding-left: 0;">
                         <li class="sub-menu">
-                            <a  class="active" href="javascript:;">
+                            <a  href="javascript:;">
                                 <span>OR</span>
                             </a>
                             <ul class="sub">
-                                <li class="active"><a href="/showPre-installationOR">Pre-installation Reports</a></li>
+                                <li ><a href="/showPre-installationOR">Pre-installation Reports</a></li>
                                 <li><a href="/showDailyInspectionOR">Daily Inspection Reports</a></li>
-                                <li><a href="/showPreventiveMaintainanceOR">Preventive Maintainance Reports</a></li>
+                                <li><a href="/showPreventiveMaintainanceOR">Preventive Maintainance</a></li>
                             </ul>
                         </li>
                         <li class="sub-menu">
-                            <a href="javascript:;">
+                            <a class="active" href="javascript:;">
                                 <span>CCU</span>
                             </a>
                             <ul class="sub">
-                                <li><a href="/showPre-installationCCU">Pre-installation Reports</a></li>
+                                <li class="active"><a href="/showPre-installationCCU">Pre-installation Reports</a></li>
                                 <li><a href="/showDailyInspectionCCU">Daily Inspection Reports</a></li>
-                                <li><a href="/showPreventiveMaintainanceCCU">Preventive Maintainance Reports</a></li>
+                                <li><a href="/showPreventiveMaintainanceCCU">Preventive Maintainance</a></li>
 
                             </ul>
                         </li>
@@ -112,7 +112,7 @@
                             <ul class="sub">
                                 <li><a href="/showPre-installationOutPatient">Pre-installation Reports</a></li>
                                 <li><a href="/showDailyInspectionOutPatient">Daily Inspection Reports</a></li>
-                                <li><a href="/showPreventiveMaintainanceOutPatient">Preventive Maintainance Reports</a></li>
+                                <li><a href="/showPreventiveMaintainanceOutPatient">Preventive Maintainance</a></li>
 
                             </ul>
                         </li>
@@ -126,7 +126,7 @@
                     <ul class="sub">
                         <li><a href="/pre-installationform">Add Pre-installation Report</a></li>
                         <li><a href="/showDailyInspectionForm">Add Daily Inspection Report</a></li>
-                        <li><a href="/showPreventiveMaintainanceForm">Add Preventive Maintainance Report</a></li>
+                        <li><a href="/showPreventiveMaintainanceForm">Add Preventive Maintainance</a></li>
 
                     </ul>
                 </li>
