--- a/views/error/add_preinstallationER.html
+++ b/views/error/add_preinstallationER.html
@@ -91,7 +91,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationOR">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionOR">Daily Inspection Reports</a></li>
-                                    <li><a href="/showPreventiveMaintainanceOR">Preventive Maintainance Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceOR">Preventive Maintainance</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
@@ -101,7 +101,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationCCU">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionCCU">Daily Inspection Reports</a></li>
-                                    <li><a href="/showPreventiveMaintainanceCCU">Preventive Maintainance Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceCCU">Preventive Maintainance</a></li>
 
                                 </ul>
                             </li>
@@ -112,7 +112,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationOutPatient">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionOutPatient">Daily Inspection Reports</a></li>
-                                    <li><a href="/showPreventiveMaintainanceOutPatient">Preventive Maintainance Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceOutPatient">Preventive Maintainance</a></li>
 
                                 </ul>
                             </li>
@@ -126,7 +126,7 @@
                         <ul class="sub">
                             <li class="active"><a href="/pre-installationform">Add Pre-installation Report</a></li>
                             <li><a href="/showDailyInspectionForm">Add Daily Inspection Report</a></li>
-                            <li><a href="/showPreventiveMaintainanceForm">Add Preventive Maintainance Report</a></li>
+                            <li><a href="/showPreventiveMaintainanceForm">Add Preventive Maintainance</a></li>
 
                         </ul>
                     </li>
@@ -141,7 +141,7 @@
         <!--main content start-->
         <section id="main-content">
             <section class="wrapper">
-                <h3><i class="fa fa-angle-right" color ="red"></i> The equipment not found , Add A New Pre-Installation Report again  </h3>
+                <h3><i class="fa fa-angle-right" color="red"></i> The equipment not found , Add A New Pre-Installation Report again </h3>
 
                 <!-- /row -->
                 <div class="row mt">
@@ -338,7 +338,7 @@
                                                 <input class=" form-control" id="name" name="name" type="text" required/>
                                             </div>
                                         </div>
-                                        
+
                                         <div class="form-group">
                                             <label for="date" class="control-label col-lg-2">Date</label>
                                             <div class="col-lg-3">
