--- a/views/management.html
+++ b/views/management.html
@@ -88,7 +88,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationOR">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionOR">Daily Inspection Reports</a></li>
-                                    <li><a href="/showPreventiveMaintainanceOR">Preventive Maintainance Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceOR">Preventive Maintainance</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
@@ -98,7 +98,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationCCU">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionCCU">Daily Inspection Reports</a></li>
-                                    <li><a href="/showPreventiveMaintainanceCCU">Preventive Maintainance Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceCCU">Preventive Maintainance</a></li>
 
                                 </ul>
                             </li>
@@ -109,7 +109,7 @@
                                 <ul class="sub">
                                     <li><a href="/showPre-installationOutPatient">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionOutPatient">Daily Inspection Reports</a></li>
-                                    <li><a href="/showPreventiveMaintainanceOutPatient">Preventive Maintainance Reports</a></li>
+                                    <li><a href="/showPreventiveMaintainanceOutPatient">Preventive Maintainance</a></li>
 
                                 </ul>
                             </li>
@@ -123,7 +123,7 @@
                         <ul class="sub">
                             <li><a href="/pre-installationform">Add Pre-installation Report</a></li>
                             <li><a href="/showDailyInspectionForm">Add Daily Inspection Report</a></li>
-                            <li><a href="/showPreventiveMaintainanceForm">Add Preventive Maintainance Report</a></li>
+                            <li><a href="/showPreventiveMaintainanceForm">Add Preventive Maintainance</a></li>
                         </ul>
                     </li>
                 </ul>
