--- a/views/add_preventive.html
+++ b/views/add_preventive.html
@@ -177,12 +177,12 @@
                                             <input class="form-control" id="serial" name="serial" type="text" required />
                                         </div>
                                     </div>
-                                    <!-- <div class="form-group">
+                                    <div class="form-group">
                                         <label for="model" class="control-label col-lg-2">Model</label>
                                         <div class="col-lg-10">
                                             <input class=" form-control" id="model" name="model" type="text" required/>
                                         </div>
-                                    </div> -->
+                                    </div>
                                     <div class="form-group">
                                         <label for="warranty" class="control-label col-lg-2">Warranty Period</label>
                                         <div class="col-lg-10">
@@ -196,7 +196,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="date" class="control-label col-lg-2">Maintainance Date</label>
+                                        <label for="date" class="control-label col-lg-2">Date</label>
                                         <div class="col-lg-3">
                                             <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
                                                 <input type="text" readonly="" id="date" name="date" size="16" class="form-control" required>
